finished watching lecture

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <title>jquery practice</title>
   </head>
   <body>
+    <div class="container">
+
+      <style media="screen">
+        .green {
+          color: green;
+        }
+      </style>
+
+      <button id='change-text'>Change the text</button>
+
+      <h1 id="rock">You guys rock!</h1>
+      <!-- <h1 style="color: #000">You guys stink!</h1>
+      <h1 style="color: #000" id="heyYouGuys">You guys!</h1> -->
+
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="app.js"></script>
